2024-09-21T01:39:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10968606341 # 425
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-21
* notice: last 14d: unq all: 8 8
* notice: prev accum: outdated-unq outdated-all / unq all: 954 1709 / 963 1718
* notice: next accum: outdated-unq outdated-all / unq all: 955 1710 / 963 1718
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-06] / []

2024-09-18T01:39:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10914005350 # 422
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-18
* notice: last 14d: unq all: 9 9
* notice: prev accum: outdated-unq outdated-all / unq all: 953 1708 / 963 1718
* notice: next accum: outdated-unq outdated-all / unq all: 954 1709 / 963 1718
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-04] / []

2024-09-16T01:45:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10876231168 # 420
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-16
* notice: last 14d: unq all: 9 10
* notice: prev accum: outdated-unq outdated-all / unq all: 953 1708 / 960 1715
* notice: next accum: outdated-unq outdated-all / unq all: 953 1708 / 963 1718
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [] / [2024-09-15]

2024-09-15T01:15:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10866956277 # 419