@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-21T01:39:35Z",
-  "count_outdated" : 1710,
-  "uniques_outdated" : 955,
+  "timestamp" : "2024-09-23T01:44:13Z",
+  "count_outdated" : 1712,
+  "uniques_outdated" : 957,
   "count" : 1718,
   "uniques" : 963,
   "clones" : [
-    {
-      "timestamp": "2024-09-08T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-09-12T00:00:00Z",
       "count": 1,
