@@ -1,12 +1,7 @@
 {
-  "count": 8,
-  "uniques": 8,
+  "count": 6,
+  "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2024-09-08T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-09-12T00:00:00Z",
       "count": 1,
